# LLM-U4CO

./: .gitignore  EXPERIMENT_COMPLETION_PLAN.md  README.md  README_zh.md  pyproject.toml
configs/: admm_qp_relaxation.yaml  admm_synthetic_qp.yaml  admm_synthetic_qp_paper.yaml  alm_eq_qp.yaml  alm_eq_qp_paper.yaml  backend_native.example.yaml  default.yaml  drs_feasibility.yaml  drs_feasibility_paper.yaml  fista_lasso.yaml  fista_lasso_paper.yaml  lns_repair_cover.yaml  lns_repair_cover_paper.yaml  pcg_linear_system.yaml  pcg_linear_system_paper.yaml  pdhg_llm_lns_is.yaml  pdhg_llm_lns_is_paper.yaml  pdhg_llm_lns_sc.yaml  pdhg_llm_lns_sc_paper.yaml  pdhg_miplib_rootlp.yaml  pdhg_miplib_rootlp_paper.yaml  pdhg_setcover_relaxation.yaml  pdhg_synthetic_lp.yaml  pdhg_synthetic_lp_paper.yaml  real_experiment_manifest.json  search_mock_llm.yaml  search_openai_compatible.example.yaml
data/llm_lns/: README.md
data/miplib/: miplib_small.txt  sample_rootlp.lp
data/synthetic/: README.md
report/: LLM4Unroll_完整项目方案.tex  Language_Guided_Verifiable_Unrolling_CO_Solver.tex
results/candidates/: admm_adaptive.txt  admm_admm_qp_adaptive.txt  admm_admm_qp_conservative.txt  admm_admm_qp_highs.txt  admm_admm_qp_learned_controller.txt  admm_admm_qp_llm_one_shot.txt  admm_admm_qp_osqp.txt  admm_admm_qp_safe_fallback_only.txt  admm_admm_qp_vanilla.txt  admm_conservative.txt  admm_vanilla.txt  (+169 more)
scripts/: audit_alignment.sh  download_miplib.sh  prepare_llm_lns_data.sh  reproduce_framework.sh  reproduce_phase1.sh  reproduce_phase2.sh  reproduce_real_experiments.sh  setup_external.sh
(+235 files in other folders)
